Asp change log
==============

The following is a history of changes to the Asp software, in reverse
chronological order.

Changes
-------

Version 1.2.0.0 (compiler 1.2.0.0, engine 1.2.0.0):
- Compiler and engine:
  - Added a new object order operator, <=>.

Version 1.1.4.0 (compiler 1.1.0.1, engine 1.1.4.0):
- Engine:
  - Corrected the program counter reported when a script ends in error.
    Previously, the next instruction was always reported, regardless of whether
    an error occurred. Now, if an error is encountered, the address of the
    offending instruction is reported by AspProgramCounter instead of the next
    instruction. This results in more accurately identifying the location of
    the matching statement within the source file.
- Application specification generator:
  - Added the del statement for removing previous definitions.

Version 1.1.3.0 (compiler 1.1.0.1, engine 1.1.3.0):
- Engine:
  - Added several API functions to support the ability for application
    functions to call other functions defined within the running script.
- Build:
  - Merged the ENABLE_ENGINE_DEBUG and ENABLE_ASPS_DEBUG options into a single
    ENABLE_DEBUG option since the previous two depended on each other anyway.
- Standalone application:
  - Improved CPU utilization by ceasing to execute script instructions while
    the script is sleeping.

Version 1.1.2.1 (compiler 1.1.0.1, engine 1.1.2.0):
- Compiler:
  - Fixed a code generation issue with return statements enclosed inside for
    loops.

Version 1.1.2.0 (compiler 1.1.0.0, engine 1.1.2.0):
- Special thanks to Oleh Hordiichuk for suggesting this change.
- Engine:
  - Added a code paging feature to allow script executable code that is larger
    than the engine's code area to be paged in from secondary storage as
    needed. Use the new API functions AspSetCodePaging and AspPageCode to make
    use of this new feature.

Version 1.1.1.1 (compiler 1.1.0.0, engine 1.1.1.0):
- Unit tests: